tests/fixtures/chartpatch/e2e/kyverno/allow-local-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-local-registry-only
spec:
  background: true
  rules:
    - name: require-local-registry
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        failureAction: Enforce
        message: Images must be pulled from localhost:5000.
        pattern:
          spec:
            =(ephemeralContainers):
              - image: "localhost:5000/*"
            =(initContainers):
              - image: "localhost:5000/*"
            containers:
              - image: "localhost:5000/*"
