tests/fixtures/chartpatch/e2e/kyverno/config.yaml
registry:
  url: localhost:5000

chart:
  name: kyverno
  source:
    repo: https://kyverno.github.io/kyverno/
    chart: kyverno
    version: 3.8.1
  patch:
    file: tests/fixtures/chartpatch/e2e/kyverno/patches/add-fixture-annotation.patch
  output:
    chart_ref: oci://localhost:5000/helm/kyverno
  verification:
    helm_lint: true
    helm_template: true
